[package]
name = "sibsecsh"
version = "0.3.3"
authors = ["Zhang Maiyun <me@myzhangll.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2"
exec = "0.3"
home = "0.5"
lettre = { version = "0.10", default-features = false, features = ["builder", "rustls-tls", "smtp-transport"] }
log = "0.4"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
thiserror = "1"
toml = "0.7"
totp-rs = "4"
ureq = "2"
users = "0.11"
