[package]
name = "sibsecsh"
version = "0.3.3"
authors = ["Zhang Maiyun <me@maiyun.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2"
exec = "0.3"
home = "0.5"
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls-tls", "smtp-transport"] }
log = "0.4"
rand = "0.8"
regex = "^1, >=1.5.5"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
thiserror = "1"
toml = "0.8"
totp-rs = "5"
ureq = "2"
whoami = "^1, >=1.5.0"
